[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://PopupDialog.gd" type="Script" id=2]

[node name="PopupDialog" type="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -93.0
margin_right = 237.0
margin_bottom = 96.0
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
graph_edit = NodePath("../GraphEdit")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 433.0
margin_bottom = 173.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 433.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Save"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 433.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 77.0
margin_bottom = 28.0
text = "Title: "

[node name="TextEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 81.0
margin_right = 433.0
margin_bottom = 33.0
size_flags_horizontal = 3
placeholder_text = "Title"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 433.0
margin_bottom = 99.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 176.0
margin_bottom = 26.0
text = "Color frame:    "

[node name="ColorFrame" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 180.0
margin_right = 433.0
margin_bottom = 29.0
size_flags_horizontal = 3
color = Color( 0.333333, 0.113725, 0.113725, 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 433.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 3.0
margin_right = 176.0
margin_bottom = 26.0
text = "Color selected: "

[node name="ColorSelected" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 180.0
margin_right = 433.0
margin_bottom = 29.0
size_flags_horizontal = 3
color = Color( 0.333333, 0.113725, 0.113725, 1 )

[node name="newlinkcontainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 433.0
margin_bottom = 169.0
size_flags_horizontal = 3

[node name="text" type="LineEdit" parent="MarginContainer/VBoxContainer/newlinkcontainer"]
margin_right = 170.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
placeholder_text = "text"

[node name="url" type="LineEdit" parent="MarginContainer/VBoxContainer/newlinkcontainer"]
margin_left = 174.0
margin_right = 344.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
placeholder_text = "url"

[node name="AddLink" type="Button" parent="MarginContainer/VBoxContainer/newlinkcontainer"]
margin_left = 348.0
margin_right = 433.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Add"

[node name="Links" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 173.0
margin_right = 433.0
margin_bottom = 173.0
custom_constants/separation = 5
[connection signal="pressed" from="MarginContainer/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/ColorFrame" to="." method="_on_ColorFrame_color_changed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/ColorSelected" to="." method="_on_ColorSelected_color_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/newlinkcontainer/AddLink" to="." method="_on_AddLink_pressed"]
